# codi

./: .clinerules  .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .npmrc  .pnpm-approve-builds.json  .prettierrc  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTEXT.md  CONTRIBUTING.md  CORE_CODI_ROADMAP.md  LICENSE  PENDING.md  README.md  STATUS.md  _e2e_pr_test.mts  action.yml  astro.config.mjs  codecov.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  preview-server.mjs  pyproject.toml  pyrightconfig.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
.claude/: settings.json
.codex/: config.toml
.codi/: audit.jsonl  codi.yaml  flags.yaml  mcp.yaml  operations.json  state.json
.cursor/: hooks.json  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit
docs/: 2026-03-26-120000_research_ai-agent-team-alignment.md  2026-03-26_AUDIT_codi-community-alignment.md  20260325_2200_RESEARCH_skills-system-analysis.md  20260326_1000_RESEARCH_cli-testing-strategies.md  20260326_2340_SPEC_update_sync_improvements.md  20260327_0030_REPORT_qa_progress.md  20260327_1500_ARCH_claude-md-codi-integration.md  20260327_1800_RESEARCH_codi-self-improvement-analysis.md  20260327_1900_RESEARCH_codi-self-improvement-20-80.md  20260327_2000_AUDIT_skill-generation-evaluation.md  20260328_1200_ARCH_codi-framework-architecture.md  20260328_1230_AUDIT_skill-generation-evaluation.md  20260328_1500_REPORT_testing-analysis.md  (+184 more)
no-ai-contrib/: preset.yaml
(+2621 files in other folders)
